--- a/AvalonStudio/AvalonStudio.Models/packages.config
+++ b/AvalonStudio/AvalonStudio.Models/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="LibGit2Sharp" version="0.22.0-pre20150716071016" targetFramework="net45" />
-  <package id="LibGit2Sharp.NativeBinaries" version="1.0.72" targetFramework="net45" />
-  <package id="Perspex" version="9999.0.978-nightly" targetFramework="net451" />
+  <package id="LibGit2Sharp" version="0.21.0.176" targetFramework="net451" />
+  <package id="LibGit2Sharp.NativeBinaries" version="1.0.119" targetFramework="net451" />
+  <package id="Perspex" version="9999.0.1001-nightly" targetFramework="net451" />
   <package id="Rx-Core" version="2.2.5" targetFramework="net451" />
   <package id="Rx-Interfaces" version="2.2.5" targetFramework="net451" />
   <package id="Rx-Linq" version="2.2.5" targetFramework="net451" />
