Began seperation of Workspace ViewModel and Workspace, as we need some central location in AvalonStudio.Extensibility that can serve as a repository for toolchains, etc.

--- a/AvalonStudio/AvalonStudio.Extensibility/AvalonStudio.Extensibility.csproj
+++ b/AvalonStudio/AvalonStudio.Extensibility/AvalonStudio.Extensibility.csproj
@@ -173,6 +173,7 @@
     <Compile Include="Utils\Constants.cs" />
     <Compile Include="Utils\IConsole.cs" />
     <Compile Include="Utils\SerializedObject.cs" />
+    <Compile Include="Workspace.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
