--- a/.gitignore
+++ b/.gitignore
@@ -229,3 +229,5 @@ $RECYCLE.BIN/
 *.msm
 *.msp
 /AvalonStudio/AvalonStudio.Languages.CPlusPlus/NativeBinaries
+/SampleLLilumProject/temp.ZeligImage
+/SampleLLilumProject/LLilum/temp.ZeligImage
