--- a/AvalonStudio/AvalonStudio.Extensibility/AvalonStudio.Extensibility.csproj
+++ b/AvalonStudio/AvalonStudio.Extensibility/AvalonStudio.Extensibility.csproj
@@ -163,6 +163,7 @@
     <Compile Include="MVVM\ObservableCollectionExtensions.cs" />
     <Compile Include="MVVM\ViewModel.cs" />
     <Compile Include="Platform\Platform.cs" />
+    <Compile Include="Plugin\IPlugin.cs" />
     <Compile Include="Projects\IProject.cs" />
     <Compile Include="Projects\IProjectFolder.cs" />
     <Compile Include="Projects\IProjectItem.cs" />
