--- a/AvalonStudio/AvalonStudio.Toolchains.STM32/AvalonStudio.Toolchains.STM32.csproj
+++ b/AvalonStudio/AvalonStudio.Toolchains.STM32/AvalonStudio.Toolchains.STM32.csproj
@@ -137,7 +137,7 @@
       <DependentUpon>CompileSettingsForm.paml</DependentUpon>
     </Compile>
     <Compile Include="CompileSettingsFormViewModel.cs" />
-    <Compile Include="GCCToolchain.cs" />
+    <Compile Include="STM32GCCToolchain.cs" />
     <Compile Include="LinkerSettingsForm.paml.cs">
       <DependentUpon>LinkerSettingsForm.paml</DependentUpon>
     </Compile>
