VEBuild project renamed to CPlusPlus project.

--- a/AvalonStudio/AvalonStudio.Projects.VEBuild/AvalonStudio.Projects.CPlusPlus.csproj
+++ b/AvalonStudio/AvalonStudio.Projects.VEBuild/AvalonStudio.Projects.CPlusPlus.csproj
@@ -161,7 +161,7 @@
       <DependentUpon>TypeSettingsForm.paml</DependentUpon>
     </Compile>
     <Compile Include="TypeSettingsFormViewModel.cs" />
-    <Compile Include="VEBuildProject.cs" />
+    <Compile Include="CPlusPlusProject.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AvalonStudio.Extensibility\AvalonStudio.Extensibility.csproj">
