IProjects are pulled in so extensions can be registered.

--- a/AvalonStudio/AvalonStudio.Extensibility/AvalonStudio.Extensibility.csproj
+++ b/AvalonStudio/AvalonStudio.Extensibility/AvalonStudio.Extensibility.csproj
@@ -171,6 +171,7 @@
     <Compile Include="Projects\IProjectTemplate.cs" />
     <Compile Include="Projects\ISolution.cs" />
     <Compile Include="Projects\ISourceFile.cs" />
+    <Compile Include="Projects\Solution.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Toolchains\IToolchain.cs" />
     <Compile Include="Utils\Constants.cs" />
