--- a/AvalonStudio/AvalonStudio/AvalonStudio.csproj
+++ b/AvalonStudio/AvalonStudio/AvalonStudio.csproj
@@ -171,6 +171,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App.cs" />
+    <Compile Include="AvalonStudioService.cs" />
     <Compile Include="CompositionRoot.cs" />
     <Compile Include="Controls\CompletionDataViewModel.cs" />
     <Compile Include="Controls\Console.paml.cs">
@@ -318,18 +319,6 @@
       <Project>{5614aa2f-2b01-4e0d-807e-924680c570ed}</Project>
       <Name>AvalonStudio.Extensibility</Name>
     </ProjectReference>
-    <ProjectReference Include="..\AvalonStudio.Languages.CPlusPlus\AvalonStudio.Languages.CPlusPlus.csproj">
-      <Project>{5d5fe113-ffef-4e49-a011-00a167efa36e}</Project>
-      <Name>AvalonStudio.Languages.CPlusPlus</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\AvalonStudio.Models\AvalonStudio.Models.csproj">
-      <Project>{EACBFF14-438D-4311-8D8C-18E7E6769C8F}</Project>
-      <Name>AvalonStudio.Models</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\AvalonStudio.Projects.CPlusPlus\AvalonStudio.Projects.CPlusPlus.csproj">
-      <Project>{47e266ea-bbc4-4794-96da-b1f3ecb5bb9b}</Project>
-      <Name>AvalonStudio.Projects.CPlusPlus</Name>
-    </ProjectReference>
     <ProjectReference Include="..\AvalonStudio.Repository\AvalonStudio.Repositories.csproj">
       <Project>{29c948e9-4d96-4490-b039-a5bbf6eec2e5}</Project>
       <Name>AvalonStudio.Repositories</Name>
@@ -337,10 +326,6 @@
     <ProjectReference Include="..\AvalonStudio.TextEditor\AvalonStudio.TextEditor.csproj">
       <Project>{2303a1a3-d7aa-41cc-972d-a710d7d3d1d3}</Project>
       <Name>AvalonStudio.TextEditor</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\AvalonStudio.Toolchains.STM32\AvalonStudio.Toolchains.STM32.csproj">
-      <Project>{b761d8e3-611e-434f-887a-8225416f51b8}</Project>
-      <Name>AvalonStudio.Toolchains.STM32</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
