--- a/AvalonStudio/AvalonStudio.Projects.CPlusPlus/AvalonStudio.Projects.CPlusPlus.csproj
+++ b/AvalonStudio/AvalonStudio.Projects.CPlusPlus/AvalonStudio.Projects.CPlusPlus.csproj
@@ -145,6 +145,10 @@
     <Compile Include="DebuggerSettingsForm.paml.cs">
       <DependentUpon>DebuggerSettingsForm.paml</DependentUpon>
     </Compile>
+    <Compile Include="IncludePathSettingsForm.paml.cs">
+      <DependentUpon>IncludePathSettingsForm.paml</DependentUpon>
+    </Compile>
+    <Compile Include="IncludePathSettingsFormViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reference.cs" />
     <Compile Include="SourceFile.cs" />
@@ -183,6 +187,7 @@
   <ItemGroup>
     <EmbeddedResource Include="DebuggerSettingsForm.paml" />
     <EmbeddedResource Include="ComponentSettingsForm.paml" />
+    <EmbeddedResource Include="IncludePathSettingsForm.paml" />
     <None Include="packages.config" />
     <EmbeddedResource Include="TypeSettingsForm.paml" />
     <EmbeddedResource Include="TargetSettingsForm.paml" />
