updated native binaries.

--- a/AvalonStudio/AvalonStudio/packages.config
+++ b/AvalonStudio/AvalonStudio/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="LibGit2Sharp" version="0.20.2.0" targetFramework="net451" />
+  <package id="LibGit2Sharp" version="0.22.0-pre20151023210959" targetFramework="net451" />
   <package id="LibGit2Sharp.NativeBinaries" version="1.0.106" targetFramework="net451" />
   <package id="Perspex" version="9999.0.1171-nightly" targetFramework="net451" />
   <package id="Perspex.Desktop" version="9999.0.1171-nightly" targetFramework="net451" />
