showing intellisense icon placeholders . & -> will complete current typing if a suggestion is highlighted. Removed debugging code for intellisense.

--- a/AvalonStudio/AvalonStudio.Extensibility/AvalonStudio.Extensibility.csproj
+++ b/AvalonStudio/AvalonStudio.Extensibility/AvalonStudio.Extensibility.csproj
@@ -155,6 +155,7 @@
     <Compile Include="Languages\CodeAnalysisResults.cs" />
     <Compile Include="Languages\CodeCompletionData.cs" />
     <Compile Include="Languages\CodeCompletionResults.cs" />
+    <Compile Include="Languages\CursorKind.cs" />
     <Compile Include="Languages\Diagnostic.cs" />
     <Compile Include="Languages\ILanguageService.cs" />
     <Compile Include="Languages\SyntaxHighlightingData.cs" />
