added bracket matching highlighting, simply by implementing a bg renderer.

--- a/AvalonStudio/AvalonStudio.Languages.CPlusPlus/AvalonStudio.Languages.CPlusPlus.csproj
+++ b/AvalonStudio/AvalonStudio.Languages.CPlusPlus/AvalonStudio.Languages.CPlusPlus.csproj
@@ -111,6 +111,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BlankCPlusPlusLangaguageTemplate.cs" />
+    <Compile Include="BracketMatchingBackgroundRenderer.cs" />
     <Compile Include="ClangFormat.cs" />
     <Compile Include="ClangFormatSettings.cs" />
     <Compile Include="CPlusPlusLanguageService.cs" />
