Hovering over code to retrieve symbol information now fully implemented.

--- a/AvalonStudio/AvalonStudio.Extensibility/AvalonStudio.Extensibility.csproj
+++ b/AvalonStudio/AvalonStudio.Extensibility/AvalonStudio.Extensibility.csproj
@@ -159,6 +159,7 @@
     <Compile Include="Languages\Diagnostic.cs" />
     <Compile Include="Languages\ILanguageService.cs" />
     <Compile Include="Languages\LinkageKind.cs" />
+    <Compile Include="Languages\ParamterSymbol.cs" />
     <Compile Include="Languages\Symbol.cs" />
     <Compile Include="Languages\SyntaxHighlightingData.cs" />
     <Compile Include="Languages\UnsavedFile.cs" />
