decoupled indentation and formatting to the language service. Language services can now weakly subscribe to editor events and manipulate the document as required,

--- a/AvalonStudio/AvalonStudio.Extensibility/AvalonStudio.Extensibility.csproj
+++ b/AvalonStudio/AvalonStudio.Extensibility/AvalonStudio.Extensibility.csproj
@@ -184,6 +184,7 @@
     <Compile Include="Utils\IConsole.cs" />
     <Compile Include="Utils\IProjectExtensions.cs" />
     <Compile Include="Utils\SerializedObject.cs" />
+    <Compile Include="Utils\WeakSubscriber.cs" />
     <Compile Include="Workspace.cs" />
   </ItemGroup>
   <ItemGroup>
